fix： 菜单勾选备份功能
